Stop preformatted text causing pages to expand and overflow

--- a/src/_sass/_typography.scss
+++ b/src/_sass/_typography.scss
@@ -63,6 +63,7 @@ code {
 
 pre {
   padding: 1em;
+  overflow-x: auto;
 }
 
 blockquote {
